<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <TextView
        android:id="@+id/product_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/list_item_element_padding"
        android:minHeight="@dimen/ic_height"
        android:text="@string/product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        android:layout_marginStart="@dimen/list_item_element_padding"
        android:layout_marginTop="@dimen/list_item_element_padding"
        android:minHeight="@dimen/ic_height"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name_text" />

    <TextView
        android:id="@+id/product_quantity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        android:layout_marginStart="@dimen/list_item_element_padding"
        android:layout_marginTop="@dimen/list_item_element_padding"
        android:minHeight="@dimen/ic_height"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_price_text" />

    <EditText
        android:id="@+id/product_quantity_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        android:minHeight="@dimen/ic_height"
        android:inputType="number"
        android:hint="@string/quantity_hint"
        app:layout_constraintStart_toEndOf="@+id/product_quantity_text"
        app:layout_constraintTop_toTopOf="@+id/product_quantity_text"
        tools:text="54" />

    <TextView
        android:id="@+id/product_supplier_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        android:layout_marginStart="@dimen/list_item_element_padding"
        android:layout_marginTop="@dimen/list_item_element_padding"
        android:minHeight="@dimen/ic_height"
        android:text="@string/suppliers_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_quantity_text" />

    <TextView
        android:id="@+id/suppliers_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        android:layout_marginStart="@dimen/list_item_element_padding"
        android:layout_marginTop="@dimen/list_item_element_padding"
        android:minHeight="@dimen/ic_height"
        android:text="@string/suppliers_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_supplier_text" />

    <ImageView
        android:id="@+id/decrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        app:layout_constraintStart_toEndOf="@+id/product_quantity_editText"
        app:layout_constraintTop_toTopOf="@+id/product_quantity_editText"
        app:srcCompat="@drawable/decrement" />

    <ImageView
        android:id="@+id/increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        app:layout_constraintStart_toEndOf="@+id/decrement"
        app:layout_constraintTop_toTopOf="@+id/decrement"
        app:srcCompat="@drawable/increment" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        app:layout_constraintStart_toEndOf="@+id/product_supplier_text"
        app:layout_constraintTop_toTopOf="@+id/product_supplier_text" />

    <ImageView
        android:id="@+id/call_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        android:layout_marginStart="@dimen/list_item_element_padding"
        app:layout_constraintStart_toEndOf="@+id/suppliers_phone_editText"
        app:layout_constraintTop_toTopOf="@+id/suppliers_phone_text"
        app:srcCompat="@drawable/call" />

    <ImageView
        android:id="@+id/delete_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        android:layout_marginStart="@dimen/list_item_element_padding"
        android:layout_marginTop="@dimen/list_item_element_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suppliers_phone_text"
        app:srcCompat="@drawable/delete" />

    <EditText
        android:id="@+id/product_name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        android:layout_marginStart="@dimen/list_item_element_padding"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/product"
        app:layout_constraintStart_toEndOf="@+id/product_name_text"
        app:layout_constraintTop_toTopOf="@+id/product_name_text" />

    <EditText
        android:id="@+id/product_price_editText"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        android:layout_marginStart="@dimen/list_item_element_padding"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/price"
        app:layout_constraintStart_toEndOf="@+id/product_price_text"
        app:layout_constraintTop_toTopOf="@+id/product_price_text" />

    <EditText
        android:id="@+id/suppliers_phone_editText"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_element_padding"
        android:layout_marginStart="@dimen/list_item_element_padding"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/suppliers_phone_text"
        app:layout_constraintTop_toTopOf="@+id/suppliers_phone_text"
        tools:text="467468 84" />
</android.support.constraint.ConstraintLayout>